# Unit-Converter-Web

./: Cargo.toml  Dockerfile  README.md
src/: conversor.rs  db.rs  main.rs  models.rs
src/file:/data/conversor.db/: 000039.sst  000042.sst  000047.sst  000052.sst  000057.sst  000062.sst  000067.sst  000072.sst  IDENTITY  LOG.old.1749770068498516  LOG.old.1749770416635504  LOG.old.1749770635122866  MANIFEST-000059  MANIFEST-000074
src/static/: index.html
src/static/styles/: main.css
