[package]
name = "unit-converter-web"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
surrealdb = { version = "2.3.3", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
